style product card, add- productdata, delete 'product:' from products.js, add icon to button

--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 body {
   font-family: "Lato", sans-serif;
+  width: 100vw;
+  background-color: #f2f3f4;
+}
+
+h1 {
+  text-align: center;
+}
+
+#products {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+.productCard {
+  width: 350px;
+  height: 500px;
+  padding: 2em;
+  margin: 1.5em;
+  box-shadow: 9px 10px 25px 1px rgba(0, 0, 0, 0.8);
+}
+
+.productCard img {
+  height: 350px;
+  width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+button {
+  background-color: rgb(222, 236, 236);
+  border-radius: 15px;
+  border: 1px solid lightgray;
+  padding: 10px;
+}
+button:hover {
+  background-color: rgb(9, 187, 9);
+  box-shadow: 2px 1px 15px -3px #000000;
 }
