--- a/style.css
+++ b/style.css
@@ -60,3 +60,9 @@ button:hover {
   background-color: rgb(9, 187, 9);
   box-shadow: 2px 1px 15px -3px #000000;
 }
+
+#cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
