styling cart.html; final layout body for both pages; correct typos; add README

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
   font-family: "Lato", sans-serif;
   width: 100vw;
   background-color: #f2f3f4;
+}
+/* body layout for products.html */
+#productCart {
   display: grid;
   grid:
     "head head head" 100px
@@ -10,11 +13,7 @@ body {
     / 30% 30% 30%;
   gap: 8px;
 }
-#warenkorb {
-  position: fixed;
-  top: 50px;
-  right: 50px;
-}
+/* grid layout on product.html*/
 .head {
   grid-area: head;
 }
@@ -25,10 +24,20 @@ body {
   grid-area: cart;
 }
 
+/* body layout for cart.html*/
+#cartBody {
+  display: block;
+}
+/* position layout for cart section on cart.html */
+#overview {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 h1 {
   text-align: center;
 }
-
+/* layout for pruducts*/
 #products {
   display: flex;
   gap: 10px;
@@ -50,6 +59,14 @@ h1 {
   margin-left: auto;
   margin-right: auto;
 }
+/* layout for cart */
+#cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* layout for buttons*/
 button {
   background-color: rgb(222, 236, 236);
   border-radius: 15px;
@@ -60,9 +77,10 @@ button:hover {
   background-color: rgb(9, 187, 9);
   box-shadow: 2px 1px 15px -3px #000000;
 }
-
-#cart {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* layout for navigation button */
+#shoppingCart,
+#back {
+  position: fixed;
+  top: 50px;
+  right: 50px;
 }
